add Perplexity, metor and updates in llm servies, test case results, gov gpt semnatic test